更新 colab.ipynb，修改源代码目录路径，并添加完整流程测试脚本的安装和运行命令。同时，更新 README.md，调整项目结构说明，增加源代码和结果文件的目录，确保用户更易于理解和使用项目。新增绘图脚本和分类检查脚本，优化数据集划分和模型训练的流程。

--- a/colab.ipynb
+++ b/colab.ipynb
@@ -36,7 +36,21 @@
    },
    "outputs": [],
    "source": [
-    "cd ./CNN-based-Marine-Vessel-Classification"
+    "cd ./CNN-based-Marine-Vessel-Classification/source_codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!pip install pillow numpy torch torchvision matplotlib tqdm\n",
+    "!python test_pipeline.py"
    ]
   },
   {
